extends Node2D

@onready var game_select = $GameSelectButton
@onready var start_button = $StartButton
@onready var quit_button = $QuitButton

# –°–ø–∏—Å–æ–∫ –¥–æ—Å—Ç—É–ø–Ω—ã—Ö –∏–≥—Ä (–ø–æ–∫–∞ —Ç–æ–ª—å–∫–æ –æ–¥–Ω–∞)
var games = ["–ö–ª–æ–Ω–¥–∞–π–∫"]
var current_game_index = 0

func _ready():
	# –ü–æ–¥–∫–ª—é—á–∞–µ–º –∫–Ω–æ–ø–∫–∏
	game_select.pressed.connect(_on_game_select_pressed)
	start_button.pressed.connect(_on_start_pressed)
	quit_button.pressed.connect(_on_quit_pressed)
	
	# –û–±–Ω–æ–≤–ª—è–µ–º —Ç–µ–∫—Å—Ç –∫–Ω–æ–ø–∫–∏
	update_game_button()

func update_game_button():
	"""–û–±–Ω–æ–≤–ª—è–µ–º —Ç–µ–∫—Å—Ç –Ω–∞ –∫–Ω–æ–ø–∫–µ –≤—ã–±–æ—Ä–∞ –∏–≥—Ä—ã"""
	game_select.text = "üì¶ " + games[current_game_index]

func _on_game_select_pressed():
	"""–ü–µ—Ä–µ–∫–ª—é—á–µ–Ω–∏–µ –º–µ–∂–¥—É –∏–≥—Ä–∞–º–∏"""
	# –ü–æ–∫–∞ —Ç–æ–ª—å–∫–æ –ö–ª–æ–Ω–¥–∞–π–∫, –Ω–æ –≥–æ—Ç–æ–≤–∏–º –Ω–∞ –±—É–¥—É—â–µ–µ
	current_game_index = (current_game_index + 1) % games.size()
	update_game_button()

	# –ü–æ–∫–∞–∑—ã–≤–∞–µ–º, —á—Ç–æ –≤—ã–±—Ä–∞–ª–∏
	print("‚úÖ –í—ã–±—Ä–∞–Ω–∞ –∏–≥—Ä–∞: ", games[current_game_index])

func _on_start_pressed():
	"""–ù–∞—á–∞—Ç—å –∏–≥—Ä—É"""
	print("üéÆ –ó–∞–ø—É—Å–∫: ", games[current_game_index])

	# –°–æ—Ö—Ä–∞–Ω—è–µ–º –≤—ã–±—Ä–∞–Ω–Ω—É—é –∏–≥—Ä—É –≤ –≥–ª–æ–±–∞–ª—å–Ω—ã–µ –Ω–∞—Å—Ç—Ä–æ–π–∫–∏
	if has_node("/root/Global"):
		if games[current_game_index] == "–ö–ª–æ–Ω–¥–∞–π–∫":
			Global.current_variant = "klondike"

	# –ü–µ—Ä–µ—Ö–æ–¥–∏–º –Ω–∞ —ç–∫—Ä–∞–Ω –∏–≥—Ä—ã
	get_tree().change_scene_to_file("res://game.tscn")

func _on_quit_pressed():
	"""–í—ã—Ö–æ–¥ –∏–∑ –∏–≥—Ä—ã"""
	print("üëã –î–æ —Å–≤–∏–¥–∞–Ω–∏—è!")
	get_tree().quit()
